syntax = "proto3";

package example.simple;

option go_package = "simplepb";
option java_package = "com.example.Simple";
option java_multiple_files = true;

message SimpleMessage {
  int32 id = 1; 
  bool is_simple = 2;
  string name = 3;
  repeated int32 sample_list = 4;
}

